--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Parcial2_Ap1_Kevin_Duran
 @using Parcial2_Ap1_Kevin_Duran.Shared
+@using Parcial2_Ap1_Kevin_Duran.Models
+@using Parcial2_Ap1_Kevin_Duran.BLL
+
