--- a/_Imports.razor
+++ b/_Imports.razor
@@ -10,4 +10,5 @@
 @using Parcial2_Ap1_Kevin_Duran.Shared
 @using Parcial2_Ap1_Kevin_Duran.Models
 @using Parcial2_Ap1_Kevin_Duran.BLL
-
+@using Radzen
+@using Radzen.Blazor
